--- a/whiteboard-app/whiteboard-app/components/container/style.css
+++ b/whiteboard-app/whiteboard-app/components/container/style.css
@@ -4,7 +4,6 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: #ededed;
     margin: 0;
     padding: 0;
 }
@@ -22,14 +21,26 @@
 }
 
 .tools-container {
-    text-align: center;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+    margin: 0.5rem 0.5rem 0;
 }
 
 .board-container {
-    width: calc(100% - 2%);
-    height: calc(100% - 5% - 25px);
-    margin: auto;
-    border-radius: 0.25rem;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    margin: 0.5rem 1.5rem 1.5rem;
+    height: calc(100% - 16% - 25px);
+    border-radius: 17px;
     background-color: white;
-    border: solid 1px lightgray;
+    border: solid 0.15rem #f2f2f2;
+}
+
+.sub-tools-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    width: min-content;
+    gap: 0.5rem;
+    margin-left: 1rem;
 }
